# timeseries-qc

./: .coverage  .gitignore  CLINE.md  CONTRIBUTING.md  LICENSE  README.md  generate_preview.py  mkdocs.yml  preview_plot.html  pyproject.toml  timeseries_qc_PRD.md
.cursor/rules/: timeseries-qc.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
.opencode/skills/: timeseries-qc.md
data/: generate_hydro_data.py  generate_oilfield_data.py  oilfield_qc_report.html  oilfield_rules.yaml  oilfield_scada.csv  solar_farm_scada.csv  solar_qc_report.html
docs/: 404.md  api-reference.md  architecture.md  browserconfig.xml  changelog.md  comparison.md  contributing.md  faq.md  glossary.md  index.html  index.md  industry-use-cases.md  installation.md  quickstart.md  report-generation.md  roadmap.md  robots.txt  rules.md  scada-integration.md  site.webmanifest  timeseries-qc.md  timestamp-validation.md  troubleshooting.md  user-guide.md  visualization.md  yaml-configuration.md
docs/assets/stylesheets/: extra.css
docs/documentation/: index.md
docs/getting-started/: index.md
docs/guides/: index.md
docs/overrides/: main.html
docs/project/: index.md
docs/reference/: index.md
examples/: _check_exec.py  oilfield.ipynb  oilfield_executed.ipynb  solar_farm.ipynb
synthetic_data_generation/: generate_solar_data.py  hydro_rules.yaml  oilfield_rules.yaml  smoke_test.py  solar_rules.yaml
tests/: conftest.py  test_checker.py  test_export.py  test_rules.py  test_time_health.py  test_viz.py  test_yaml_parser.py
tests/fixtures/: sample_multi_tag.csv  sample_rules.yaml  sample_single_tag.csv
timeseries_qc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tsqc/: __init__.py  checker.py  result.py
tsqc/config/: yaml_parser.py
tsqc/rules/: __init__.py  base.py  builtins.py
tsqc/time_health/: checker.py
tsqc/viz/: rle.py  timeline.py
