[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeseries-qc"
version = "0.1.3"
description = "Classify timeseries rows as Good / Sus / Bad and render a multi-tag quality timeline chart."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["timeseries", "data quality", "QC", "SCADA", "IoT", "pandas"]
authors = [
    { name = "timeseries-qc contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.5",
    "plotly>=5.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://nagusubra.github.io/timeseries-qc/"
Repository = "https://github.com/nagusubra/timeseries-qc"
Issues = "https://github.com/nagusubra/timeseries-qc/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "build>=1.0",
    "twine>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tsqc*"]
exclude = ["synthetic_data_generation*", "examples*", "tests*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["tsqc"]
omit = ["tests/*"]
